# kibitzer

./: .gitignore  .mcp.json  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
.kibitzer/: config.toml  store.sqlite
docs/: architecture.md  coach.md  configuration.md  index.md  integration.md  interceptors.md  modes.md  python-api.md
docs/plans/: agent-kibitzer.md  user-kibitzer.md
docs/superpowers/plans/: 2026-03-28-kibitzer.md  2026-03-31-python-api.md  2026-04-20-doc-context-pipeline.md
docs/superpowers/specs/: 2026-03-28-kibitzer-design.md  2026-03-29-kibitzer-v02-design.md  2026-03-31-python-api-design.md  2026-04-12-lackpy-integration-response.md
src/kibitzer/: __init__.py  __main__.py  cli.py  config.py  config.toml  context7.py  docs.py  failure_modes.py  session.py  state.py  store.py
src/kibitzer/coach/: fledgling.py  observer.py  suggestions.py  tools.py
src/kibitzer/controller/: mode_controller.py
src/kibitzer/guards/: path_guard.py
src/kibitzer/hooks/: __init__.py  post_tool_use.py  pre_tool_use.py  templates.py
src/kibitzer/interceptors/: base.py  blq.py  fledgling.py  jetsam.py  registry.py
src/kibitzer/mcp/: server.py
src/kibitzer/umwelt/: __init__.py  consumer.py  vocabulary.py
tests/: conftest.py  test_cli.py  test_coach.py  test_coach_observations.py  test_config.py  test_context7.py  test_docs.py  test_ducklog_integration.py  test_failure_modes.py  test_fledgling_integration.py  test_hook_protocol.py  test_hook_stdin_stdout.py  test_hooks_post.py  test_hooks_pre.py  test_integration.py  test_interceptors.py  test_mcp_server.py  test_mode_controller.py  test_namespace.py  test_path_guard.py  test_review_mode.py  test_session.py  test_session_integration.py  test_session_lackpy.py  test_session_safe_mode.py  test_state.py  test_store.py  test_tdd_patterns.py  test_tool_discovery.py  test_umwelt_plugin.py
