[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kibitzer"
version = "0.1.0"
description = "Claude Code extension that watches agent tool calls and suggests structured alternatives"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "mcp[cli]>=1.0",
]

[project.scripts]
kibitzer = "kibitzer.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/kibitzer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]
