[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kibitzer"
version = "0.3.1"
description = "Claude Code extension that watches agent tool calls and suggests structured alternatives"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Teague Sterling" },
]
keywords = ["claude-code", "hooks", "mcp", "agent", "toolcraft", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "click>=8.1",
    "mcp[cli]>=1.0",
]

[project.urls]
Homepage = "https://github.com/teague/kibitzer"
Repository = "https://github.com/teague/kibitzer"
Issues = "https://github.com/teague/kibitzer/issues"
Documentation = "https://kibitzer.readthedocs.io"

[project.scripts]
kibitzer = "kibitzer.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/kibitzer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]
fledgling = [
    "fledgling>=0.3.0",
]
